syntax = "proto3";
option go_package = "github.com/sergds/autovpn2/internal/rpc";

service AutoVPN {
    rpc ExecuteTask (ExecuteRequest) returns (stream ExecuteUpdate);
}

message ExecuteRequest {
    string operation = 1;
    repeated string argv = 2;
}

message ExecuteUpdate {
    string statecode = 1;
    optional string statetext = 2;
    optional string opdesc = 3; // custom operation description
}